--- a/functionaltipsandtricks/pom.xml
+++ b/functionaltipsandtricks/pom.xml
@@ -8,5 +8,18 @@
     <artifactId>functionaltipsandtricks</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>repo.bodar.com</id>
+            <url>http://repo.bodar.com</url>
+        </repository>
+    </repositories>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.googlecode.totallylazy</groupId>
+            <artifactId>totallylazy</artifactId>
+            <version>1049</version>
+        </dependency>
+    </dependencies>
 </project>
